tests/interpreter/fail/014-short-circuit-failure-mut.hyg
let mutable counter = 0;
({counter++; false}) && ({counter++; true});
({counter++; true}) || ({counter++; true});
assert(counter = 4) // Only 2 boolean evaluations due to short-circuits
